# loki

./: .gitignore  Cargo.toml  Goals.md  README.md  build.zig  first.loki  first.loki.cpp  grammer.txt  main.loki  new_syntax.loki  roadmap.txt  spec.md  test_crash.txt  testfile.loki  todos  todos.txt
docs/: dendron.yml
examples/: 00_consts.loki  00_variables_constants.loki  01_functions.loki  01_variables.loki  03_comparisons.loki  04_structs.loki  05_enums.loki  06_namespace_access.loki  07_conditionals.loki  08_while.loki  09_for.loki  10_pointers.loki  11_foreign_decls.loki  arrays.loki  assignments.loki  base.loki  comparisons.loki  conditionals.loki  dynamic_array.loki  enum.loki  enums.loki  first.loki  first.loki.cpp  for.loki  generics.loki.notyet  hello.loki  hello_world  hello_world.loki  if.loki  loops.loki  module_load.loki  patterns.loki.notyet  pointers.loki  project_euler_01.loki  sizeandcast.loki  std.loki  struct_init.loki  structs.loki  testfile.loki  union.loki  (+4 more)
modules/: c_allocator.loki  dynamic_array.loki  dynamic_arrays.loki  math.loki  print.loki  string.loki  stringutils.loki  universe_number.loki
samples/: base.loki  first.loki  ncurses.loki  test.loki
src/: Ast.zig  Backend.zig  CBackend.zig  CodeGen.zig  Parser.zig  Tokenizer.zig  ast.rs  backend.rs  bytecode.rs  c.zig  c_backend.rs  compiler.rs  compliation.rs  context.rs  design.md  errors.rs  errors.zig  generic_ds.rs  hash_list.rs  ir.rs  lexer.rs  main.rs  main.zig  new_lexer.rs  node_manager.rs  parser.rs  parser_combinator.rs  pipeline.rs  pipeline.zig  semantic.rs  stack.rs  (+9 more)
(+50 files in other folders)
