[package]
name = "loki"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
anyhow = "1.0.57"
pretty_assertions = "1.2.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
